# forum-template

./: .gitmodules  Docker-compose.yaml  README.md  mongo-init.js
documentation/: Brukerveiledning.md  Lærlingveiledning.md  Prosjektrapport.docx  Superdoc.md  todo.md
forum-backend/: .env  Cargo.toml  dockerfile
forum-backend/src/: main.rs
forum-backend/src/controllers/: mod.rs  post_controller.rs  request_data_controller.rs  user_controller.rs
forum-backend/src/models/: message_model.rs  mod.rs  monitor_models.rs  post_models.rs  user_model.rs
forum-backend/src/mongo_repo/: list_databases.rs  mod.rs  mongo_connection.rs  utils.rs
forum-backend/src/utilities/: api_availebility.rs  mod.rs  select_collection.rs
forum-backend/src/utils/: mod.rs  utils.rs
