[package]
name = "forum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
base64 = "0.22.1"
bson = { verison="2.10.0", features = ["chrono"] }
chrono = "0.4.37"
dotenv = "0.15.0"
futures-util = "0.3.30"
mongodb = "2.8.2"
serde = "1.0.197"
serde_json = "1.0.116"
sha2 = "0.10.8"
#url_encoder = { path = "../url_encoder/"}
uuid = {version = "1.8.0", features = ["v4"]}
